# socialmedia-frontend-rust

./: Cargo.toml
src/: main.rs
