[package]
name = "wasm-dev"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
web-sys = "0.3.70"
gloo-storage = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"